fixed the squishy book ui issue

--- a/home.css
+++ b/home.css
@@ -66,7 +66,6 @@ nav ul li a {
 .browse .bigBookSection{
     overflow-x: scroll;
     display: flex;
-    column-gap: 10px;
     /* justify-content: space-between; */
     column-gap: 10px;
     height: 450px;
@@ -85,8 +84,12 @@ section.smallBookSection{
     row-gap: 20px;
     /* justify-content: space-between; */
     padding: 20px 30px;
+    /* overflow-y: scroll;
+    overflow-x: hidden; */
+}
+.subject{
+    min-height: 300px;
     overflow-y: scroll;
-    overflow-x: hidden;
 }
 /* .browse .bigBookSection .smallBookSection .smallBookSection{
     width: 30svw;
@@ -96,6 +99,10 @@ section.smallBookSection{
 } */
 .smallBookSection article{
     display: flex;
+    width: 400px;
+    /* This width above. this was the culprit.
+    Jeez! a whole night of headache.
+    This is why commenting regularly is a must */
     background-color: rgb(137, 231, 82);
     padding: 20px 20px;
     column-gap: 20px;
@@ -103,10 +110,24 @@ section.smallBookSection{
     margin-top: 20px;
 
 }
-.smallBookSection article img{
-    width: 20px;
+.smallBookSection .subjectName{
+    font-weight: 700;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
 }
-.browse .bigBookSection .smallBookSection .smallBookSection .smallBookSectionName{
+.smallBookSection article img{
+    width: 40%;
+}
+.smallBookSection article button{
+    padding: 10px;
+    background-color: rgb(81, 81, 193);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    margin-top: 50px;
+}
+.browse .bigBookSection .smallBookSection .smallBookSectionName{
     justify-content: center;
     color: black;
     display: flex;
